--- a/package.json
+++ b/package.json
@@ -4,17 +4,35 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "4.17.1",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^8.0.0",
+    "joi": "^17.13.3",
+    "moment": "^2.30.1",
+    "pino": "^9.6.0",
+    "pino-http": "^10.4.0",
+    "pino-pretty": "^13.0.0",
     "sequelize": "^6.23.0",
     "sqlite3": "^5.0.0"
   },
   "scripts": {
-    "start": "nodemon ./src/server.js",
-    "seed": "node ./scripts/seedDb.js"
+    "start": "nodemon ./src/server.ts",
+    "seed": "ts-node --transpile-only ./scripts/seedDb.ts",
+    "test": "jest --config jest.config.ts --runInBand"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.13.8",
     "concurrently": "^8.0.1",
-    "nodemon": "^2.0.22"
+    "jest": "^29.7.0",
+    "jest-mock-extended": "^4.0.0-beta1",
+    "nodemon": "^2.0.22",
+    "sequelize-mock": "^0.10.2",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.6",
+    "ts-node": "^10.9.2"
   },
   "engines": {
     "node": ">=10.16.3"
