feat: added module aliases, disabled admin auth middleware

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,13 @@
     "moduleResolution": "NodeNext",
     "target": "ESNext",
     "esModuleInterop": true,
-    "strict": true
+    "strict": true,
+    "paths": {
+      "@utils/*": ["./src/utils/*"],
+      "@core/*": ["./src/core/*"],
+      "@services/*": ["./src/services/*"],
+      "@middleware/*": ["./src/middleware/*"],
+      "@controllers/*": ["./src/controllers/*"]
+    }
   }
 }
