--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.0.0",
     "joi": "^17.13.3",
+    "module-alias": "^2.2.3",
     "moment": "^2.30.1",
     "pino": "^9.6.0",
     "pino-http": "^10.4.0",
@@ -22,6 +23,7 @@
     "test": "jest --config jest.config.ts --runInBand"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.8",
@@ -33,6 +35,13 @@
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2"
+  },
+  "_moduleAliases": {
+    "@utils": "./src/utils",
+    "@core": "./src/core",
+    "@services": "./src/services",
+    "@middleware": "./src/middleware",
+    "@controllers": "./src/controllers"
   },
   "engines": {
     "node": ">=10.16.3"
